crates/embedded-bitmap-font-macros/tests/ui/old_bitmap_font_removed_fail.stderr
error[E0432]: unresolved import `embedded_bitmap_font_macros::bitmap_font`
 --> tests/ui/old_bitmap_font_removed_fail.rs:1:5
  |
1 | use embedded_bitmap_font_macros::bitmap_font;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `bitmap_font` in the root
