crates/embedded-bitmap-font-macros/tests/ui/old_bitmap_font_removed_fail.rs
use embedded_bitmap_font_macros::bitmap_font;

fn main() {
    let _ = bitmap_font;
}
